--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,7 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+				<version>3.3.0-SNAPSHOT</version>
 			</plugin>
 		</plugins>
 	</build>
