--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
 	<name>cicd</name>
 	<description>Demo project for Spring Boot</description>
 	<properties>
-		<java.version>17</java.version>
+		<java.version>1.8</java.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -34,7 +34,7 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
-				<version>3.3.0-SNAPSHOT</version>
+				<version>3.2.3</version>
 			</plugin>
 		</plugins>
 	</build>
